[package]
name = "last-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"


[dependencies]
tree-sitter = "0.22.0"
tree-sitter-cpp = "0.22.0"
tree-sitter-haskell = "0.15.0"
tree-sitter-ocaml = "0.22.0"
#tree-sitter-rust = "0.21.0"
difflib = "0.4.0"
serde_json = "1.0"
